# elow

./: .gitignore  README.md  flake.nix  project.nix  pyproject.toml  requirements.txt
elow/: app.py
elow/tools/: .gitignore  sheetsapi.py  tournament.py  tournamenttools.py
