[tool.poetry]
name = "elow"
version = "0.1.0"
description = ""
authors = ["Dennis <dennis.diekmann@uni-oldenburg.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.7.0"
gspread = "^6.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
